feat: add header block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>My pets project</title>
 </head>
 <body>
+    <header>
+        <a href="#">
+            <img src="sdfs" alt="My pets project">
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
