--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My pets project</title>
 </head>
 <body>
-    <header>
+    <header> tets
         <a href="#">
             <img src="sdfs" alt="My pets project">
         </a>
@@ -17,8 +17,8 @@
                 <li><a href="#">Home</a></li>
             </ul>
         </nav>
-    </header>
-
+    </header> 
+tes
     <footer>
         <h2>test</h2>
     </footer>
